# SPLN2324

./: README.md
TPC1/: README.md  word_freq.py
TPC2/: README.md  pyproject.toml
TPC2/word_freq/: __init__.py
TPC3/: README.md  aaaaaaaaaaaa.py  makepyproject.py  pyproject.toml  script.py
TPC5/: README.md  spacyTPC.py
