

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aaaaaaaaaaaa"
authors = [
    {name = "Gonçalo", email = "goncalo@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

dependencies = [
    "jjcli"
]

[project.scripts]
aaaaaaaaaaaa = "aaaaaaaaaaaa:main"

                     
